@@ -1,5 +1,10 @@
 2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/CFString.c: Fixed string hashing and implemented
+	CFStringGetRangeOfComposedCharactersAtIndex().
+
+2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/objc_interface.h:
 	* Source/CFRuntime.m: Add bridging function.
 	* Source/CFString.c: Bridge NSCFString with CFString types.
